--- a/IntentExample/res/layout/child.xml
+++ b/IntentExample/res/layout/child.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+ This program is free software. It comes without any warranty, to
+ the extent permitted by applicable law. You can redistribute it
+ and/or modify it under the terms of the Do What The Fuck You Want
+ To Public License, Version 2, as published by Sam Hocevar. See
+ http://sam.zoy.org/wtfpl/COPYING for more details.
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
@@ -9,7 +16,7 @@
         android:layout_height="wrap_content"
         android:text="Hello World, IntentExample"
     />
-    <Button android:id="@+id/done_button" 
+    <Button android:id="@+id/done_button"
             android:text="Done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
