--- a/CheckableListView/app/src/main/res/layout/main.xml
+++ b/CheckableListView/app/src/main/res/layout/main.xml
@@ -8,9 +8,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="codeguru.checkablelistview.MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@android:id/list"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
