--- a/CheckableListView/app/src/main/res/menu/main.xml
+++ b/CheckableListView/app/src/main/res/menu/main.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="codeguru.checkablelistview.MainActivity" >
     
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
+    <item android:id="@+id/add"
+        android:title="@string/add"
+        app:showAsAction="ifRoom" />
 </menu>
