--- a/CheckableListView/app/src/main/res/layout/main.xml
+++ b/CheckableListView/app/src/main/res/layout/main.xml
@@ -9,8 +9,8 @@
     tools:context="codeguru.checkablelistview.MainActivity">
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@android:id/list"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
