--- a/CheckableListView/app/src/main/res/layout/add.xml
+++ b/CheckableListView/app/src/main/res/layout/add.xml
@@ -3,24 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="codeguru.checkablelistview.AddActivity">
 
     <TextView
-        android:text="Word:"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Word:" />
+
+    <EditText
+        android:id="@+id/word_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText android:id="@+id/word_text"
+    <Button
+        android:id="@+id/add_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Button android:id="@+id/add_button"
-        android:text="@string/add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/add" />
 
 </LinearLayout>
