--- a/CheckableListView/app/src/main/res/menu/main.xml
+++ b/CheckableListView/app/src/main/res/menu/main.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="codeguru.checkablelistview.MainActivity" >
-    
-    <item android:id="@+id/add_menu"
+    tools:context="codeguru.checkablelistview.MainActivity">
+
+    <item
+        android:id="@+id/add_menu"
         android:icon="@drawable/ic_menu_btn_add"
         android:title="@string/add"
         app:showAsAction="ifRoom" />
