--- a/LabeledEditText/app/src/main/res/layout/activity_main.xml
+++ b/LabeledEditText/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,7 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <codeguru.labelededittext.LabeledEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
