--- a/LabeledEditText/app/src/main/res/layout/labeled_edit_text.xml
+++ b/LabeledEditText/app/src/main/res/layout/labeled_edit_text.xml
@@ -25,15 +25,13 @@
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"/>
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:singleLine="true"
-        android:hint="@string/hello_world"/>
+        android:singleLine="true"/>
 
 </merge>
