LabeledEditText: Add hint attribute

--- a/LabeledEditText/app/src/main/res/layout/activity_main.xml
+++ b/LabeledEditText/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     <codeguru.labelededittext.LabeledEditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:label="@string/label"/>
+        app:label="@string/label"
+        app:hint="@string/hint"/>
 
 </RelativeLayout>
