--- a/LabeledEditText/app/src/main/res/values/attrs.xml
+++ b/LabeledEditText/app/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <declare-styleable name="LabeledEditText">
         <attr name="label" format="string"/>
+        <attr name="hint" format="string"/>
     </declare-styleable>
 </resources>
