--- a/LabeledEditText/app/src/main/res/values/attrs.xml
+++ b/LabeledEditText/app/src/main/res/values/attrs.xml
@@ -3,5 +3,7 @@
     <declare-styleable name="LabeledEditText">
         <attr name="label" format="string"/>
         <attr name="hint" format="string"/>
+        <attr name="labelWeight" format="integer"/>
+        <attr name="editWeight" format="integer"/>
     </declare-styleable>
 </resources>
