--- a/TestNextButton/app/src/main/res/layout/fragment_main.xml
+++ b/TestNextButton/app/src/main/res/layout/fragment_main.xml
@@ -1,13 +1,41 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/scroll"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context="codeguru.testnextbutton.MainActivityFragment"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:stretchColumns="1" >
 
-</RelativeLayout>
+        <TableRow>
+
+            <TextView
+                android:text="@string/first"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/first_text"
+                android:selectAllOnFocus="true"
+                android:singleLine="true" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:text="@string/second"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/second_text"
+                android:selectAllOnFocus="true"
+                android:singleLine="true" />
+        </TableRow>
+
+    </TableLayout>
+
+</ScrollView>
