Change icons on Floating Action Buttons

--- a/RoomExample/app/src/main/res/layout/activity_item_detail.xml
+++ b/RoomExample/app/src/main/res/layout/activity_item_detail.xml
@@ -49,6 +49,6 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@+id/item_detail_container"
         app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+        app:srcCompat="@drawable/ic_content_save_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
