--- a/NotificationExample/app/src/main/res/layout/activity_main.xml
+++ b/NotificationExample/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,11 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5" />
 
-    <TextView
+    <Button
+        android:id="@+id/notification_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_label"
+        android:text="@string/button_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
